bug fixed #6792
SVN-Revision: 14120